# ChangeLog for app-i18n/scim-chinese
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/scim-chinese/Attic/ChangeLog,v 1.16 2004/07/17 16:33:06 usata Exp $

  18 Jul 2004; Mamoru KOMACHI <usata@gentoo.org> scim-chinese-0.3.0.ebuild,
  scim-chinese-0.4.0.ebuild:
  Marked as stable. 0.3.0 blocks >=app-i18n/scim-0.99

  28 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> scim-chinese-0.3.0.ebuild,
  scim-chinese-0.4.0.ebuild:
  Added scim-cvs as scim alternative

  26 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> -scim-chinese-0.2.6.ebuild,
  -scim-chinese-0.2.7.ebuild, scim-chinese-0.3.0.ebuild:
  Removed 0.2.x as scim-0.8.x series are no longer in CVS. Marked 0.3.0 stable
  on x86.

*scim-chinese-0.4.0 (21 Jun 2004)

  21 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> +scim-chinese-0.4.0.ebuild:
  Version bumped.

  04 May 2004; David Holm <dholm@gentoo.org> scim-chinese-0.3.0.ebuild:
  Added to ~ppc.

*scim-chinese-0.3.0 (04 May 2004)

  04 May 2004; Alastair Tse <liquidx@gentoo.org> +scim-chinese-0.3.0.ebuild:
  new GPL'ed version of scim-chinese (smart pinyin input). Ebuild submitted by
  Ming Zhao <zhaoming@tsinghua.org.cn> (#49674)

*scim-chinese-0.2.7 (07 Feb 2004)

  07 Feb 2004; Alastair Tse <liquidx@gentoo.org> scim-chinese-0.2.6.ebuild,
  scim-chinese-0.2.7.ebuild:
  version bump. new versions against 0.9.0, removed versioning cruft to avoid
  problems with installing modules in the wrong directory. (#36476)

*scim-chinese-0.2.6 (09 Nov 2003)

  09 Nov 2003; Alastair Tse <liquidx@gentoo.org> scim-chinese-0.2.6.ebuild:
  version bump. fix docs dir

*scim-chinese-0.2.4 (29 Aug 2003)

  29 Aug 2003; Alastair Tse <liquidx@gentoo.org> scim-chinese-0.2.4.ebuild:
  version bump

  16 Jul 2003; Alastair Tse <liquidx@gentoo.org> scim-chinese-0.2.3.ebuild:
  marked stable for x86

*scim-chinese-0.2.3 (07 Jul 2003)

  07 Jul 2003; Alastair Tse <liquidx@gentoo.org> scim-chinese-0.2.2.ebuild,