@@ -1,6 +1,8 @@
-MD5 559875685cc0490d8e31bf6e6523d360 scim-chinese-0.4.0.ebuild 643
 MD5 17733f4e803817b596a334d6d1e8df93 ChangeLog 2696
 MD5 e92a48548554c80cf90e18df17ff6a82 metadata.xml 156
+MD5 559875685cc0490d8e31bf6e6523d360 scim-chinese-0.4.0.ebuild 643
+MD5 22e1bc8e85d75831d0a5404cebf8cf40 scim-chinese-0.4.1.ebuild 652
 MD5 56930fb592fa1c8b46e8c3562ffce28f scim-chinese-0.3.0.ebuild 669
 MD5 0f37be51643aefadda6f07b8b2b48298 files/digest-scim-chinese-0.4.0 71
+MD5 c62a36d58e7ee479a10dc2eab7bc14cf files/digest-scim-chinese-0.4.1 71
 MD5 a9b283e15eb05eeac84a66262bdb0521 files/digest-scim-chinese-0.3.0 71
