@@ -1,0 +1,1 @@
+MD5 9df58f1a2fe4b3e2f5893de6d2b8d7a1 scim-chinese-0.4.1.tar.gz 4813372
